# compressor

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.c.16D9209903070967.idx
src/: a.txt  main.c
